# major-gainz

./: .dockerignore  .env.backup  .env.example  .gitignore  Dockerfile  ENVIRONMENT_CENTRALIZED.md  Makefile  Makefile.bak  README.md  cute_script.sh  docker-build-and-run.bat  docker-build-and-run.ps1  docker-build-and-run.sh  docker-compose.local.yml  docker-compose.yml
.devcontainer/: devcontainer.json  docker-compose.yml  launch.json  settings.json
frontend/src/pages/: PureChatPage.tsx
frontend/src/purechat/components/: PureChatChatWindow.tsx
frontend/src/purechat/hooks/: usePureChatAgent.ts
frontend/src/purechat/utils/: defaultPersonality.ts
services/agent_support/: Makefile  README.md  pyproject.toml
services/agent_support/agent_support/: requirements.txt
services/agent_support/agent_support/hedera_rag_server/: __init__.py  build_index.py  config.py  logging_config.py  rag_index.py  server.py
services/agent_support/knowledge_base/sample_folder_1/: 1 - Creating a Hedera Account.txt  2 - Loops on Hedera  3 - Concentrated Liquidity Yield Farming.txt
services/agent_support/knowledge_base/sample_folder_2/: 11 - Calling Smart Contracts_ Invoking Functions and Reading Return Values on Hedera.txt
services/agent_support/tests/: test_mcp.py  test_rag.py  test_rag_kb.py
services/backend/: .env.example  Makefile  pyproject.toml  tokens_enabled.json
services/backend/app/: __init__.py  crud.py  crud_saucerswap.py  database.py  main.py  models.py  schemas.py  settings.py
services/backend/app/routers/: analytics.py  chat.py  defi.py  holders.py  maintenance.py  mcp_proxy.py  ohlcv.py  portfolio.py  token_holdings.py  tokens.py
services/backend/app/services/: coingecko.py  portfolio.py  saucerswap_ohlcv.py  token_holdings.py
services/backend/app/services/defi/: README.md  __init__.py  base_client.py  bonzo_client.py  config.py  defi_profile_service.py  saucerswap_client.py
services/backend/scripts/: rebuild_db.py
services/backend/static/token_holdings/: ARCHITECTURE.md  Makefile  README.MD  pyproject.toml  pytest.ini  token_holdings.bak  token_holdings.db
services/backend/static/token_holdings/analytics/: portfolio.py  token_analysis.ipynb
services/backend/static/token_holdings/src/: __init__.py  cli.py  config.py  token_decimals.json
services/backend/static/token_holdings/src/database/: __init__.py  connection.py  models.py
services/backend/static/token_holdings/src/fetchers/: __init__.py  hedera_fetcher.py
services/backend/static/token_holdings/src/services/: __init__.py  pricing_service.py  token_filter_service.py  token_validator.py
services/backend/static/token_holdings/src/utils/: __init__.py  csv_export.bak  csv_export.py  database_utils.py
services/backend/static/token_holdings/tests/: __init__.py  test_database_models.py  test_filter_service.py  test_fixes.py  test_pricing_service.py  test_token_validator.py
services/backend/tests/: conftest.py  test_consolidated_integration.py  test_defi_platforms.py  test_defi_positions.py  test_openai_proxy.py  test_portfolio.py  test_saucerswap_filter.py  test_saucerswap_ohlcv_alias.py  test_token_holdings.py
services/backend/tests/integration/: test_openai_live_proxy.py
services/frontend/: .env.example  .eslintrc.cjs  appSettings.json  index.html  package.json  tsconfig.json  vite.config.ts
services/frontend/src/: App.css  App.tsx  empty-module.js  index.css  integration-example.tsx  main.tsx  vite-env.d.ts
services/frontend/src/components/: AddressDisplay.tsx  AddressInput.tsx  ChatWindow.tsx  ConfirmAddressModal.tsx  DeFiFilterDemo.tsx  DefiHeatmaps.tsx  JsonExplorer.tsx  Navigation.tsx  NetworkSelector.tsx  PoolDetailDrawer.tsx  PortfolioChart.tsx  PortfolioTable.tsx  TokenDetailsPopup.tsx  TokenHolderAnalysis.tsx  WalletConnection.tsx
services/frontend/src/hooks/: useScratchpad.ts
services/frontend/src/majorgainz/: MajorGainzPage.tsx
services/frontend/src/pages/: MajorGainzPage.tsx  PureChatPage.tsx  QuickOriginsPage.tsx
services/frontend/src/types/: externals.d.ts  metamask.d.ts  portfolio.ts
(+58 files in other folders)
