[tool.poetry]
name = "hedera-ohlcv-api"
version = "0.1.0"
description = "FastAPI service providing OHLCV data for Hedera tokens"
authors = ["Your Name <you@example.com>"]
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.110"
uvicorn = {extras = ["standard"], version = "^0.29"}
sqlalchemy = "^2.0"
httpx = "^0.27"
pydantic = "^2.7"
numpy = "^1.26"
pandas = "^2.2.0"
anyio = "^4.9.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2"
pytest-asyncio = "^0.23"
requests = "^2.31"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api" 