[tool.poetry]
name = "token-holdings-tracker"
version = "1.0.0"
description = "A comprehensive system for tracking and analyzing token holder distributions on the Hedera network"
authors = ["Token Holdings Team <team@example.com>"]
readme = "README.MD"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.31.0"
pandas = "^2.2.0"
numpy = "^1.24.0"
click = "^8.1.0"
tqdm = "^4.65.0"
python-dotenv = "^1.0.0"
cryptography = "^41.0.0"
sqlalchemy = "^2.0.0"
alembic = "^1.12.0"
tabulate = "^0.9.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-mock = "^3.11.0"
black = "^23.0.0"
flake8 = "^6.0.0"
mypy = "^1.5.0"
pytest-cov = "^6.2.1"

[tool.poetry.scripts]
token-holdings = "src.cli:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py39']

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true 