[tool.poetry]
name = "token-holdings-tracker"
version = "1.0.0"
description = "A comprehensive system for tracking and analyzing token holder distributions on the Hedera network"
authors = ["Token Holdings Team <team@example.com>"]
readme = "README.MD"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
click = "^8.1.7"
sqlalchemy = "^2.0.29"
tabulate = "^0.9.0"
pandas = "^2.2.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
pytest-mock = "^3.10"
flake8 = "^5.0"
black = "^23.0"
mypy = "^1.0"
pytest-cov = "^4.0.0"
jupyter = "^1.0.0"
plotly = "^5.13.0"
ipython-sql = "^0.5.0"
notebook = "^7.0.0"
jupytext = "^1.16.1"

[tool.poetry.scripts]
token-holdings = "src.cli:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py39']

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true 